@startuml
entity edc_catalog {
  * id: string <<PK>>
  * participantId: string
  * properties: Map<String, Object>
  * expired: boolean
  --
}

entity edc_dataset {
  * id: string <<PK>>
  * offers: Map<String, Object>
  * properties: Map<String, Object>
  * catalogId: string <<FK>>
  --
}

entity edc_data_service {
  * id: string <<PK>>
  * terms: string
  * endpointUrl: string
  --
}

entity edc_distribution {
  * format: string
  * dataServiceId: string <<FK>>
  * datasetId: string <<FK>>
  --
}

entity edc_catalog_data_service {
  * catalogId: string <<FK>>
  * dataServiceId: string <<FK>>
  --
}

edc_catalog ||--o{ edc_dataset: contains
edc_catalog ||--o{ edc_catalog_data_service: contains
edc_data_service ||--o{ edc_distribution: provides
edc_dataset ||--o{ edc_distribution: contains
edc_data_service ||--o{ edc_catalog_data_service: contains
@enduml
